# ong-firmware-esp32c3_humSoil_light

./: CMakeLists.txt  README.md  monitor_serial.py  partitions.csv  sdkconfig  sdkconfig.old  vercel_backend_example.js
main/: CMakeLists.txt  adc_shared.c  adc_shared.h  config.h  idf_component.yml  main.c  task_error_logger.c  task_error_logger.h  task_http.c  task_http.h  task_initial_config.c  task_initial_config.h  task_led_status.c  task_led_status.h  task_light_sensor.c  task_light_sensor.h  task_main.c  task_main.h  task_mqtt.c  task_mqtt.h  task_nvs.c  task_nvs.h  task_sensor.c  task_sensor.h  task_sensor_config.c  task_sensor_config.h  task_sensor_reader.c  task_sensor_reader.h  task_sensors_unified.c  task_sensors_unified.h  task_soil_humidity.c  task_soil_humidity.h  task_wifi.c  task_wifi.h
